--- a/package.json
+++ b/package.json
@@ -11,8 +11,7 @@
 	"dependencies": {
 		"next": "14.0.4",
 		"react": "^18",
-		"react-dom": "^18",
-		"react-helmet": "^6.1.0"
+		"react-dom": "^18"
 	},
 	"devDependencies": {
 		"@types/node": "^20",
