--- a/package.json
+++ b/package.json
@@ -4,12 +4,13 @@
 	"private": true,
 	"scripts": {
 		"dev": "next dev",
-		"build": "next build",
+		"build": "next build && next-export-optimize-images",
 		"start": "next start",
 		"lint": "next lint"
 	},
 	"dependencies": {
 		"next": "14.0.4",
+		"next-export-optimize-images": "^3.2.0",
 		"react": "^18",
 		"react-dom": "^18"
 	},
