Revert "Feat/wording and image loading"

--- a/package.json
+++ b/package.json
@@ -4,13 +4,12 @@
 	"private": true,
 	"scripts": {
 		"dev": "next dev",
-		"build": "next build && next-export-optimize-images",
+		"build": "next build",
 		"start": "next start",
 		"lint": "next lint"
 	},
 	"dependencies": {
 		"next": "14.0.4",
-		"next-export-optimize-images": "^3.2.0",
 		"react": "^18",
 		"react-dom": "^18"
 	},
